--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-    "name": "project_two",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-      "test": "testing"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/dktrcoco/Project_Two.git"
-    },
-    "keywords": [
-      "Express",
-      "Handlebars",
-      "MySQL"
-    ],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "mysql": "^2.18.1",
-      "express": "^4.16.3",
-      "express-handlebars": "^3.0.0",
-      "sequelize": "^6.3.5"
-    },
-    "bugs": {
-      "url": "https://github.com/dktrcoco/Project_Two/issues"
-    },
-    "homepage": "https://github.com/dktrcoco/Project_Two#readme"
-  }
-  
+  "name": "project_two",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "testing"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dktrcoco/Project_Two.git"
+  },
+  "keywords": [
+    "Express",
+    "Handlebars",
+    "MySQL"
+  ],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "eslint": "^7.10.0",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "mysql": "^2.18.1",
+    "sequelize": "^6.3.5"
+  },
+  "bugs": {
+    "url": "https://github.com/dktrcoco/Project_Two/issues"
+  },
+  "homepage": "https://github.com/dktrcoco/Project_Two#readme"
+}
